--- a/_data/data.yml
+++ b/_data/data.yml
@@ -10,7 +10,7 @@ sidebar:
     # Profile information
     name: Martin Antilley
     tagline: Software Developer
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    avatar: headshot.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: mantilley1@gmail.com
