--- a/_data/data.yml
+++ b/_data/data.yml
@@ -82,6 +82,11 @@ experiences:
     title: Experiences
     info:
       - role: Software Developer
+        time: 2023 - Present
+        company: Technology Solutions Associates, Lancaster, PA
+        details: |
+          
+      - role: Software Developer
         time: 2023
         company: Southwest Transplant Alliance, Dallas, TX
         details: |
