--- a/_data/data.yml
+++ b/_data/data.yml
@@ -57,63 +57,60 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Dedicated and performance-driven professional with passion for identifying, prioritizing, and executing tasks in the software development life cycle.
-      Proficiency in developing systems to maintain, analyze and improve performance, integrity, and reliability of existing applications.
-      Aptitude for building testable, accessible, enjoyable applications for web, and writing clean, high-quality code. Talent for engaging closely with clients and cross-functional departments to communicate project statuses and proposals. 
-      Stellar track record of identifying and resolving complex problems by leveraging strong troubleshooting skills and providing robust solutions in high-pressure and deadline-driven environments. Skilled in cultivating professional skills of high-performing teams through interactive training and inspiring leadership. 
-      Refined and conversant communicator; equipped with exceptional, interpersonal, relationship-building, decision-making, analytical thinking, problem-solving, organizational, and project management skills.
+      Software developer with experience in the .NET ecosystem, skilled in all phases of the software development lifecycle. Focused on improving code quality and maintainability through refactoring and cleaning up existing code. Passionate about understanding systems and logic at a deep level, with a commitment to continuous learning beyond language and framework expertise. 
 education:
     title: Education
     info:
       - degree: BS in Computer Science
         university: Western Governer's University
         time: 2023
-        details: 
+        details: |
+          Data Structures and Algorithms I & II, Operating Systems, Advanced Data Management, Fundamentals of Information Security, Discrete Math I & II, Computer Architecture
       - degree: BS in Mechanical Engineering
         university: University of Texas at Tyler
         time: 2017
-        details: 
+        details: |
+          Finite Element Analysis,  Matrix Methods, Probability & Statistics 
       - degree: AS in Mathematics
         university: Tyler Junior College
         time: 2014
-        details:
+        details: |
+          Selected Coursework: Calculus I, II, & III, Differential Equations, Programming for Engineers
 
 experiences:
     title: Experiences
     info:
       - role: Software Developer
-        time: 2023 - Present
+        time: Nov 2023 - Present
         company: Technology Solutions Associates, Lancaster, PA
         details: |
+        Technologies Used: .NET, C#, Microsoft SQL Server, Python, TypeScript, Vue.js, Azure DevOps
+          - Designed, developed, and maintained desktop and full-stack applications across multiple projects using .NET, WPF, Vue.js, C#, DevExpress, and Microsoft SQL Server.
+          - Implemented Redux-style (MVU) state management for predictable state updates, improving data flow and performance.
+          - Collaborated via video calls for pair programming and work item clarification, consistently delivering features and bug fixes on time in a 2-week sprint cycle.
+          - Achieved 100% test coverage for all added or modified code using NUnit and TDD, ensuring robust functionality and reducing errors
+          - Reviewed approximately 50% of company pull requests, providing actionable feedback to improve code quality and maintain project standards
+          - Optimized select database interactions by fine-tuning queries, reducing query time by up to 50% for targeted operations.
+          - Refactored specific legacy code using new C# features, reducing file size by over 60% in some instances while preserving functionality and readability. 
           
       - role: Software Developer
-        time: 2023
+        time: Jul 2023 - Sep 2023
         company: Southwest Transplant Alliance, Dallas, TX
         details: |
-          Engaged in all phases of the software development lifecycle including: gathering and analyzing user/business system
-          requirements and creating application system models. Participated in design meetings and consulted with stakeholders to
-          refine, test and debug programs to meet business needs.
-            - Tested, maintained, and recommended software improvements to ensure strong functionality and optimization
-            - Designed and maintained software applications using ASP.NET and Entity Framework
-            - Developed new front-end and back-end features for existing software applications using Blazor and Microsoft SQL Server
-            - Maintained application data integrity by leveraging Azure Functions and the associated APIs
-            - Utilized git and Azure Devops as part of a CI/CD pipeline
+        Technologies Used: .NET, C#, Microsoft SQL Server, Blazor, Entity Framework, Azure DevOps
+          - Designed, developed, and maintained internal software applications using ASP.NET, Entity Framework, Blazor, and Azure DevOps in a CI/CD pipeline.
+          - Built and deployed a real-time dashboard for tracking potential organ donors, enabling immediate adoption post-deployment and supporting life-saving decisions.
+          - Handled sensitive personal information in compliance with HIPAA, ensuring data security and adherence to regulatory standards. 
 
       - role: Project Manager
-        time: 2017 - 2021
+        time: May 2017 - Sep 2021
         company: EMA Engineering & Consulting, Tyler, TX
         details: |
-          Delivered constructive input in investigating all facets of building constraints and developed insightful solutions by cross-collaborating 
-          with highly qualified teams. Articulated technical limitations and specifications with team members and clients to
-          meet the defined organizational goals. Built and fostered long-lasting and trustworthy relationships with prospective clients and
-          educated them on technical details. Played vital role in testing functionality, controls, and programming of multiple mechanical
-          equipment software to optimize results.
-            - Reduced energy usage at numerous buildings over 30% by evaluating inefficiencies.
-            - Envisioned, designed, and developed project guidelines applicable to future projects.
-            - Devised and implemented quality assurance procedures to guarantee accurate work.
-            - Led, trained, and guided top-notch team of consultants, architects, engineers, and builders through construction process.
-            - Designed and improved multi-million dollar building renovations to enhance function of two schools, enriching
-              students' learning experiences.
+          - Tested functionality, controls, and programming of mechanical equipment software at over 50 buildings optimize performance and ensure quality.
+          - Built and fostered relationships with prospective clients and educated them on technical details.
+          - Reduced energy usage by over 30% in numerous buildings through efficiency evaluations.
+          - Led and trained teams of consultants, architects, engineers, and builders.
+          - Designed and led 2 multi-million dollar school building renovations, reversing the negative press the school district received about the quality of the learning experience of hundreds of middle school students.
 
 certifications:
       title: Certifications
@@ -152,7 +149,7 @@ certifications:
               met and business objectives are achieved.
 
 
-        - name: Professional Engineer
+        - name: Professional Engineer (Inactive)
           start: 2020
           end:
           organization: Texas Board of Professional Engineers and Land Surveyors
@@ -247,7 +244,13 @@ skills:
 
       - name: C# / .NET / Entity Framework
 
-      - name: HTML5 / CSS / Javascript
+      - name: HTML / CSS / Javascript
+
+      - name: Git / Github / Version Control
+
+      - name: Software Development Lifecycle / Code Review
+
+      - name: Unit Testing / Test Driven Development
 
 
 
